@@ -5,21 +5,28 @@ import org.bukkit.ChatColor;
 
 import com.sk89q.worldedit.bukkit.WorldEditPlugin;
 
+import one.lindegaard.MobHunting.MobHunting;
+
 public class WorldEditCompat {
 	private static WorldEditPlugin mPlugin;
 	private static boolean supported = false;
 
 	public WorldEditCompat() {
-		mPlugin = (WorldEditPlugin) Bukkit.getPluginManager().getPlugin(CompatPlugin.WorldEdit.getName());
-		if (mPlugin.getDescription().getVersion().compareTo("7.0.0") >= 0) {
+		if (!isEnabledInConfig()) {
 			Bukkit.getConsoleSender().sendMessage(ChatColor.GOLD + "[MobHunting] " + ChatColor.RESET
-					+ "Enabling compatibility with WorldEdit (" + mPlugin.getDescription().getVersion() + ")");
-			supported = true;
+					+ "Compatibility with WorldEdit is disabled in config.yml");
 		} else {
-			Bukkit.getConsoleSender()
-					.sendMessage(ChatColor.GOLD + "[MobHunting] " + ChatColor.RED
-							+ "Your current version of WorldEdit (" + mPlugin.getDescription().getVersion()
-							+ ") is not supported by MobHunting. Mobhunting does only support 7.0.0 and newer.");
+			mPlugin = (WorldEditPlugin) Bukkit.getPluginManager().getPlugin(CompatPlugin.WorldEdit.getName());
+			if (mPlugin.getDescription().getVersion().compareTo("7.0.0") >= 0) {
+				Bukkit.getConsoleSender().sendMessage(ChatColor.GOLD + "[MobHunting] " + ChatColor.RESET
+						+ "Enabling compatibility with WorldEdit (" + mPlugin.getDescription().getVersion() + ")");
+				supported = true;
+			} else {
+				Bukkit.getConsoleSender()
+						.sendMessage(ChatColor.GOLD + "[MobHunting] " + ChatColor.RED
+								+ "Your current version of WorldEdit (" + mPlugin.getDescription().getVersion()
+								+ ") is not supported by MobHunting. Mobhunting does only support 7.0.0 and newer.");
+			}
 		}
 	}
 
@@ -27,7 +34,9 @@ public class WorldEditCompat {
 		return mPlugin;
 	}
 
-	
+	public static boolean isEnabledInConfig() {
+		return MobHunting.getInstance().getConfigManager().enableIntegrationWorldEdit;
+	}
 
 	public static boolean isSupported() {
 		return supported;
